# CORRLA_RS

./: .gitlab-ci.yml  Cargo.toml  LICENSE.txt  readme.md
examples/: benchmark_dirichlet_sampler.py  benchmark_dmd.py  benchmark_pca.py  benchmark_pod.py  benchmark_rbf_interp.py  benchmark_rsvd.py
src/: lib.rs  lib_math_utils.rs  lib_math_utils_py.rs
src/lib_math_utils/: active_subspaces.rs  dmd_rom.rs  interp_utils.rs  mat_utils.rs  pca_rsvd.rs  pod_rom.rs  random_svd.rs  space_samplers.rs  stats_corr.rs  univariate_rv.rs
tests/: test_a.rs
