[package]
name = "corrla_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "corrla_rs"
# dylib emits .so, rlib setting emits rust lib files
crate-type = ["cdylib", "rlib"]
path = 'src/lib.rs'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "*"
itertools = "*"
rand = {version=">=0.8.5", featurs=["alloc"]}
statrs = "*"
argmin = {version="0.10.0"}
argmin-math = "*"
finitediff = {version="0.1.4", features = ["ndarray"]}
rand_distr = "*"
num-traits = "*"
num-complex = "*"
ndarray = {version=">=0.15.6", features=["rayon"]}
faer = {version = "0.19.2", features=["unstable"]}
faer-ext = {version="*", features=["ndarray"]}
rayon = "*"
pyo3 = {version = "0.21.2", features = ["extension-module"]}
numpy = "0.21"
kdtree = "0.7.0"
# nalgebra = "*"
# kiddo = "3.0.0"
# cudarc = { version = "*", default-features = false, optional = true, features = ["driver", "cublas", "nvrtc"] }
